@@ -49,7 +49,8 @@ GUMPS_OBJS= Actor_gump.o  Book_gump.o  File_gump.o  Gump.o  Gump_button.o \
 IMAGEWIN_OBJS=imagebuf.o imagewin.o iwin8.o ibuf8.o ibuf16.o imagescl.o \
 	savepcx.o
 SHAPES_OBJS=bodies.o items.o shapeinf.o shapevga.o vgafile.o font.o fontvga.o
-OBJS_OBJS=animate.o barge.o chunks.o contain.o egg.o iregobjs.o objs.o \
+OBJS_OBJS=animate.o barge.o chunks.o chunkter.o \
+	contain.o egg.o iregobjs.o objs.o \
 	spellbook.o virstone.o jawbone.o
 # unused: test.o
 USECODE_OBJS=ucmachine.o ucsched.o intrinsics.o useval.o conversation.o \
