@@ -196,7 +196,7 @@ void Game_window::paint_chunk_flats
 						xoff, yoff);
 	Chunk_object_list *olist = get_objects(cx, cy);
 					// Paint flat tiles.
-	Image_buffer8 *cflats = olist->get_rendered_flats(false);
+	Image_buffer8 *cflats = olist->get_rendered_flats();
 	win->copy8(cflats->get_bits(), c_chunksize, c_chunksize, xoff, yoff);
 
 	Flat_object_iterator next(olist);// Now do flat RLE objects.
@@ -225,8 +225,15 @@ void Game_window::paint_dungeon_chunk_flats
 		return;
 		}
 					// Paint flat tiles.
-	Image_buffer8 *cflats = olist->get_rendered_flats(true);
+	Image_buffer8 *cflats = olist->get_rendered_flats();
 	win->copy8(cflats->get_bits(), c_chunksize, c_chunksize, xoff, yoff);
+					// Paint tiles outside dungeon black.
+	for (int tiley = 0; tiley < c_tiles_per_chunk; tiley++)
+		for (int tilex = 0; tilex < c_tiles_per_chunk; tilex++)
+			if (!olist->in_dungeon(tilex, tiley))
+				win->fill8(0, c_tilesize, c_tilesize, 
+					xoff + tilex*c_tilesize, 
+					yoff + tiley*c_tilesize);
 
 	Flat_object_iterator next(olist);// Now do flat RLE objects.
 	Game_object *obj;
