@@ -68,6 +68,7 @@ public:
 	Shape_frame() : data(0), datalen(0)
 		{  }
 	unsigned char *get_data() { return data; }
+	bool is_rle() const { return rle; }
 					// Read in shape/frame.
 	unsigned char read(DataSource& shapes, uint32 shapeoff,
 					uint32 shapelen, int frnum);
